build/log/idf_py_stdout_output_30726
[1/10] Performing build step for 'bootloader'
[1/1] cd /Users/danygagnon/esp/traffic/build/bootloader/esp-idf/esptool_py && /Users/danygagnon/.espressif/python_env/idf5.1_py3.9_env/bin/python /Users/danygagnon/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /Users/danygagnon/esp/traffic/build/bootloader/bootloader.bin
Bootloader binary size 0x66c0 bytes. 0x940 bytes (8%) free.
[2/8] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj 
/Users/danygagnon/.espressif/tools/xtensa-esp32-elf/esp-2022r1-11.2.0/xtensa-esp32-elf/bin/xtensa-esp32-elf-gcc -DMBEDTLS_CONFIG_FILE=\"mbedtls/esp_config.h\" -DUNITY_INCLUDE_CONFIG_H -I/Users/danygagnon/esp/traffic/build/config -I/Users/danygagnon/esp/traffic/main -I/Users/danygagnon/esp/esp-idf/components/newlib/platform_include -I/Users/danygagnon/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/Users/danygagnon/esp/esp-idf/components/freertos/esp_additions/include/freertos -I/Users/danygagnon/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/Users/danygagnon/esp/esp-idf/components/freertos/esp_additions/include -I/Users/danygagnon/esp/esp-idf/components/esp_hw_support/include -I/Users/danygagnon/esp/esp-idf/components/esp_hw_support/include/soc -I/Users/danygagnon/esp/esp-idf/components/esp_hw_support/include/soc/esp32 -I/Users/danygagnon/esp/esp-idf/components/esp_hw_support/port/esp32/. -I/Users/danygagnon/esp/esp-idf/components/esp_hw_support/port/esp32/private_include -I/Users/danygagnon/esp/esp-idf/components/heap/include -I/Users/danygagnon/esp/esp-idf/components/log/include -I/Users/danygagnon/esp/esp-idf/components/soc/include -I/Users/danygagnon/esp/esp-idf/components/soc/esp32/. -I/Users/danygagnon/esp/esp-idf/components/soc/esp32/include -I/Users/danygagnon/esp/esp-idf/components/hal/esp32/include -I/Users/danygagnon/esp/esp-idf/components/hal/include -I/Users/danygagnon/esp/esp-idf/components/hal/platform_port/include -I/Users/danygagnon/esp/esp-idf/components/esp_rom/include -I/Users/danygagnon/esp/esp-idf/components/esp_rom/include/esp32 -I/Users/danygagnon/esp/esp-idf/components/esp_rom/esp32 -I/Users/danygagnon/esp/esp-idf/components/esp_common/include -I/Users/danygagnon/esp/esp-idf/components/esp_system/include -I/Users/danygagnon/esp/esp-idf/components/esp_system/port/soc -I/Users/danygagnon/esp/esp-idf/components/esp_system/port/include/private -I/Users/danygagnon/esp/esp-idf/components/xtensa/include -I/Users/danygagnon/esp/esp-idf/components/xtensa/esp32/include -I/Users/danygagnon/esp/esp-idf/components/lwip/include -I/Users/danygagnon/esp/esp-idf/components/lwip/include/apps -I/Users/danygagnon/esp/esp-idf/components/lwip/include/apps/sntp -I/Users/danygagnon/esp/esp-idf/components/lwip/lwip/src/include -I/Users/danygagnon/esp/esp-idf/components/lwip/port/esp32/include -I/Users/danygagnon/esp/esp-idf/components/lwip/port/esp32/include/arch -I/Users/danygagnon/esp/traffic/components/lcd_controller/include -I/Users/danygagnon/esp/esp-idf/components/driver/include -I/Users/danygagnon/esp/esp-idf/components/driver/deprecated -I/Users/danygagnon/esp/esp-idf/components/driver/esp32/include -I/Users/danygagnon/esp/esp-idf/components/esp_pm/include -I/Users/danygagnon/esp/esp-idf/components/esp_ringbuf/include -I/Users/danygagnon/esp/traffic/components/mode/include -I/Users/danygagnon/esp/traffic/components/traffic_light/include -I/Users/danygagnon/esp/traffic/components/delayer/include -I/Users/danygagnon/esp/traffic/components/simulation/include -I/Users/danygagnon/esp/esp-idf/components/efuse/include -I/Users/danygagnon/esp/esp-idf/components/efuse/esp32/include -I/Users/danygagnon/esp/esp-idf/components/mbedtls/port/include -I/Users/danygagnon/esp/esp-idf/components/mbedtls/mbedtls/include -I/Users/danygagnon/esp/esp-idf/components/mbedtls/mbedtls/library -I/Users/danygagnon/esp/esp-idf/components/mbedtls/esp_crt_bundle/include -I/Users/danygagnon/esp/esp-idf/components/esp_app_format/include -I/Users/danygagnon/esp/esp-idf/components/bootloader_support/include -I/Users/danygagnon/esp/esp-idf/components/bootloader_support/bootloader_flash/include -I/Users/danygagnon/esp/esp-idf/components/app_update/include -I/Users/danygagnon/esp/esp-idf/components/spi_flash/include -I/Users/danygagnon/esp/esp-idf/components/pthread/include -I/Users/danygagnon/esp/esp-idf/components/esp_timer/include -I/Users/danygagnon/esp/esp-idf/components/app_trace/include -I/Users/danygagnon/esp/esp-idf/components/esp_event/include -I/Users/danygagnon/esp/esp-idf/components/nvs_flash/include -I/Users/danygagnon/esp/esp-idf/components/esp_phy/include -I/Users/danygagnon/esp/esp-idf/components/esp_phy/esp32/include -I/Users/danygagnon/esp/esp-idf/components/vfs/include -I/Users/danygagnon/esp/esp-idf/components/esp_netif/include -I/Users/danygagnon/esp/esp-idf/components/wpa_supplicant/include -I/Users/danygagnon/esp/esp-idf/components/wpa_supplicant/port/include -I/Users/danygagnon/esp/esp-idf/components/wpa_supplicant/esp_supplicant/include -I/Users/danygagnon/esp/esp-idf/components/esp_wifi/include -I/Users/danygagnon/esp/esp-idf/components/unity/include -I/Users/danygagnon/esp/esp-idf/components/unity/unity/src -I/Users/danygagnon/esp/esp-idf/components/cmock/CMock/src -I/Users/danygagnon/esp/esp-idf/components/console -I/Users/danygagnon/esp/esp-idf/components/http_parser -I/Users/danygagnon/esp/esp-idf/components/esp-tls -I/Users/danygagnon/esp/esp-idf/components/esp-tls/esp-tls-crypto -I/Users/danygagnon/esp/esp-idf/components/esp_adc/include -I/Users/danygagnon/esp/esp-idf/components/esp_adc/interface -I/Users/danygagnon/esp/esp-idf/components/esp_adc/esp32/include -I/Users/danygagnon/esp/esp-idf/components/esp_adc/deprecated/include -I/Users/danygagnon/esp/esp-idf/components/esp_eth/include -I/Users/danygagnon/esp/esp-idf/components/esp_gdbstub/include -I/Users/danygagnon/esp/esp-idf/components/esp_gdbstub/xtensa -I/Users/danygagnon/esp/esp-idf/components/esp_gdbstub/esp32 -I/Users/danygagnon/esp/esp-idf/components/esp_hid/include -I/Users/danygagnon/esp/esp-idf/components/tcp_transport/include -I/Users/danygagnon/esp/esp-idf/components/esp_http_client/include -I/Users/danygagnon/esp/esp-idf/components/esp_http_server/include -I/Users/danygagnon/esp/esp-idf/components/esp_https_ota/include -I/Users/danygagnon/esp/esp-idf/components/esp_lcd/include -I/Users/danygagnon/esp/esp-idf/components/esp_lcd/interface -I/Users/danygagnon/esp/esp-idf/components/protobuf-c/protobuf-c -I/Users/danygagnon/esp/esp-idf/components/protocomm/include/common -I/Users/danygagnon/esp/esp-idf/components/protocomm/include/security -I/Users/danygagnon/esp/esp-idf/components/protocomm/include/transports -I/Users/danygagnon/esp/esp-idf/components/esp_local_ctrl/include -I/Users/danygagnon/esp/esp-idf/components/esp_psram/include -I/Users/danygagnon/esp/esp-idf/components/sdmmc/include -I/Users/danygagnon/esp/esp-idf/components/esp_serial_slave_link/include -I/Users/danygagnon/esp/esp-idf/components/espcoredump/include -I/Users/danygagnon/esp/esp-idf/components/espcoredump/include/port/xtensa -I/Users/danygagnon/esp/esp-idf/components/wear_levelling/include -I/Users/danygagnon/esp/esp-idf/components/fatfs/diskio -I/Users/danygagnon/esp/esp-idf/components/fatfs/vfs -I/Users/danygagnon/esp/esp-idf/components/fatfs/src -I/Users/danygagnon/esp/esp-idf/components/idf_test/include -I/Users/danygagnon/esp/esp-idf/components/idf_test/include/esp32 -I/Users/danygagnon/esp/esp-idf/components/ieee802154/include -I/Users/danygagnon/esp/esp-idf/components/json/cJSON -I/Users/danygagnon/esp/esp-idf/components/mqtt/esp-mqtt/include -I/Users/danygagnon/esp/esp-idf/components/perfmon/include -I/Users/danygagnon/esp/esp-idf/components/spiffs/include -I/Users/danygagnon/esp/esp-idf/components/ulp/ulp_common/include -I/Users/danygagnon/esp/esp-idf/components/ulp/ulp_common/include/esp32 -I/Users/danygagnon/esp/esp-idf/components/wifi_provisioning/include -mlongcalls -Wno-frame-address  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fmacro-prefix-map=/Users/danygagnon/esp/traffic=. -fmacro-prefix-map=/Users/danygagnon/esp/esp-idf=/IDF -fstrict-volatile-bitfields -Wno-error=unused-but-set-variable -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -D_GNU_SOURCE -DIDF_VER=\"v5.1-dev-644-g867745a05c-dirty\" -DESP_PLATFORM -D_POSIX_READER_WRITER_LOCKS -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -c /Users/danygagnon/esp/traffic/main/main.c
/Users/danygagnon/esp/traffic/main/main.c: In function 'task_lcd_screen':
/Users/danygagnon/esp/traffic/main/main.c:19:31: error: 'sprintf' may write a terminating nul past the end of the destination [-Werror=format-overflow=]
   19 |     sprintf(buffer, "Temps: %d", time);
      |                               ^
/Users/danygagnon/esp/traffic/main/main.c:19:5: note: 'sprintf' output between 9 and 11 bytes into a destination of size 10
   19 |     sprintf(buffer, "Temps: %d", time);
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
cc1: some warnings being treated as errors
ninja: build stopped: subcommand failed.
